--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,42 @@
-.bg-pibvpnav {
-    background-color: rgba(33,66,99,25%);
+body {
+    color: #FFF;
 }
-
+.carousel-caption {
+    bottom: 3rem;
+    z-index: 10;
+}
+.carousel-item {
+    height: 100vh;
+}
+.carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 100vh;
+}
+@media (min-width: 40em) {
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 1.25rem;
+        font-size: 1.25rem;
+        line-height: 1.4;
+    }
+}
+.carousel-caption > h1 {
+    font-size: 69px;
+    text-transform: uppercase;
+    padding-bottom: 50px;
+}
+.carousel-caption > h2 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 69px;
+    text-transform: uppercase;
+}
+.bg-pibvpnav {
+    background-color: rgba(13,45,64, 0.4);
+}
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -10,14 +45,63 @@
     -ms-user-select: none;
     user-select: none;
 }
-
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
     }
 }
-
 .btn-custom {
     padding: 5px 15px;
     border-radius: 50px;
+}
+.sobre {
+    padding-top: 4rem;
+    padding-bottom: 5rem;
+    background-position: center center;
+    background-image: url("./../images/sobre.png");
+    background-attachment: fixed;
+}
+.agenda {
+    background-position: center center;
+    background-image: url("./../images/agenda.png");
+    background-attachment: fixed;
+}
+.agenda .container .row > .grid-1 {
+    padding: 60px 0px 80px 40px;
+    background-color: #6c4f76;
+}
+.agenda .container .row > .grid-2 {
+    padding: 60px 0px 80px 40px;
+    background-color: #6c4f76;
+    opacity: 0.95;
+}
+.agenda .container .row > .grid-footer {
+    height: 300px;
+    background-color: #6c4f76;
+    opacity: 0.95;
+}
+.agenda .container .row > .grid {
+    padding: 60px 0px 80px 40px;
+}
+.bg-1 {
+    background-color: #5d4765;
+}
+.bg-2 {
+    background-color: #6c4f76;
+}
+.bg-3 {
+    background-color: #856d8b;
+}
+.doar {
+    background-color: #fff;
+    color: rgb(13,45,64);
+}
+.doar .row .col > img {
+    margin-top: 60px;
+    margin-bottom: 30px;
+    width: 72px;
+    height: 60px;
+}
+.doar .row .col > h1 {
+    font-size: 69px;
 }
