--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     min-width: 100%;
     height: 100vh;
 }
+
 @media (min-width: 40em) {
     /* Bump up size of carousel content */
     .carousel-caption p {
@@ -44,6 +45,9 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+video.bd-placeholder-img {
+    width: 100%;
 }
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
