--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     color: #FFF;
+    background-color: #e9e9e9;
 }
 .carousel-caption {
     bottom: 3rem;
@@ -46,6 +47,36 @@ body {
     -ms-user-select: none;
     user-select: none;
 }
+.ministerios {
+    position: relative;
+    padding-top: 4rem;
+    padding-bottom: 5rem;
+    overflow: hidden;
+    height: 500px;
+}
+.ministerios .row {
+    justify-content: center;
+}
+.ministerios .row h1 {
+    padding-top: 6.5ex;
+}
+.bg-video-ministerio {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: -1000;
+    background-size: cover;
+}
+#video-ministerio {
+    position: absolute;
+    background-image: url("./../images/ministerios.png");
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 500px;
+    z-index: -1000;
+}
 video.bd-placeholder-img {
     width: 100%;
 }
@@ -64,6 +95,20 @@ video.bd-placeholder-img {
     background-position: center center;
     background-image: url("./../images/sobre.png");
     background-attachment: fixed;
+}
+.sobre-igreja {
+    padding-top: 4rem;
+    padding-bottom: 5rem;
+    background-position: top center;
+    background-image: url("./../images/sobre-igreja.png");
+    background-attachment: fixed;
+    height: 500px;
+}
+.sobre-igreja .row {
+    justify-content: center;
+}
+.sobre-igreja .row h1 {
+    padding-top: 6.5ex;
 }
 .agenda {
     background-position: center center;
@@ -97,7 +142,6 @@ video.bd-placeholder-img {
     background-color: #856d8b;
 }
 .doar {
-    background-color: #fff;
     color: rgb(13,45,64);
 }
 .doar .row .col > img {
@@ -108,4 +152,45 @@ video.bd-placeholder-img {
 }
 .doar .row .col > h1 {
     font-size: 69px;
+}
+.sobre-txt, .ministerio-txt {
+    color: #0e3042;
+    padding-top: 50px;
+}
+.doar button.btn {
+    margin: 30px 0;
+    padding: 10px 60px;
+    font-size: 2.0ex;
+    font-weight: bold;
+}
+
+.programacao {
+    background-color: #0e3042;
+    padding: 60px 0;
+}
+.programacao h1 {
+    margin-top:30px;
+    padding-bottom: 30px;
+}
+
+.ministerio-grid {
+    color: #0e3042;
+}
+
+.ministerio-grid h3 {
+    padding-top: 30px;
+}
+
+.ministerio-grid p {
+    height: 200px;
+}
+
+.pibvp-footer {
+    background-image: url("./../images/ironpatern.png");
+    color:#000;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.pibvp-footer a {
+    margin: 2px;
 }
