--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,6 @@ body {
     min-width: 100%;
     height: 100vh;
 }
-
-@media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-        margin-bottom: 1.25rem;
-        font-size: 1.25rem;
-        line-height: 1.4;
-    }
-}
 .carousel-caption > h1 {
     font-size: 69px;
     text-transform: uppercase;
@@ -50,14 +41,21 @@ body {
     -ms-user-select: none;
     user-select: none;
 }
-.ministerios {
+.container-fluid.ministerios {
     position: relative;
     padding-top: 4rem;
     padding-bottom: 5rem;
     overflow: hidden;
     height: 500px;
 }
-.contribua {
+.container-fluid.contribua {
+    position: relative;
+    padding-top: 4rem;
+    padding-bottom: 5rem;
+    overflow: hidden;
+    height: 700px;
+}
+.container-fluid.contato {
     position: relative;
     padding-top: 4rem;
     padding-bottom: 5rem;
@@ -100,6 +98,15 @@ body {
     background-size: cover;
     background-color: #e9e9e9;
 }
+.bg-video-contato {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: -1000;
+    background-size: cover;
+    background-color: #e9e9e9;
+}
 #video-contribua {
     position: absolute;
     background-image: url("./../images/bg-contribua.png");
@@ -113,11 +120,7 @@ body {
 video.bd-placeholder-img {
     width: 100%;
 }
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
-}
+
 .btn-custom {
     padding: 5px 15px;
     border-radius: 50px;
@@ -196,7 +199,9 @@ video.bd-placeholder-img {
     font-size: 2.0ex;
     font-weight: bold;
 }
-
+.row.contato {
+    min-height: 100%;
+}
 .programacao {
     background-color: #0e3042;
     padding: 60px 0;
@@ -205,19 +210,15 @@ video.bd-placeholder-img {
     margin-top:30px;
     padding-bottom: 30px;
 }
-
 .ministerio-grid {
     color: #0e3042;
 }
-
 .ministerio-grid h3 {
     padding-top: 30px;
 }
-
 .ministerio-grid p {
     height: 200px;
 }
-
 .pibvp-footer {
     background-image: url("./../images/ironpatern.png");
     background-color: #e9e9e9;
@@ -227,4 +228,34 @@ video.bd-placeholder-img {
 }
 .pibvp-footer a {
     margin: 2px;
+}
+.container-fluid.maps{
+    margin-top: 50px;
+}
+.row.contato .col h1 {
+    text-shadow: black 0.1em 0.1em 0.2em;
+}
+@media (min-width: 40em) {
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 1.25rem;
+        font-size: 1.25rem;
+        line-height: 1.4;
+    }
+}
+@media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+    }
+}
+@media (max-device-width: 400px) {
+    .container-fluid.contribua, .container-fluid.contato {
+        height: 200px;
+    }
+    .sobre-txt, .ministerio-txt {
+        padding-top: 0px;
+    }
+    .container-fluid.maps{
+        margin-top: 10px;
+    }
 }
